2020-03-19

* reorg datasets so we can make URNs
* add (but not merge) Canadian Cases
* pull data
* add timeline of events
* make sure data is automatically added by Git

2020-03-18

* auto checkin pulled raw data
* documentation updates
* update to Consensas

2020-03-17 ☘️

* pulled data
* some reorganization of data folders
* add BC tests
* add data/cooked/cook.yaml to make datasets soft
* add AB tests
* pulled new data
* added missing country codes
* add SK tests
* ownership changed from dpjanes to Consensas
* add NS tests
* add MB tests
* add PE tests
* add NB tests

2020-03-16

* README + CHANGELOG
* remove old population dataset
* add StatsCan population + age cohorts
* add premier, CMO and COVID websites
* add testing (ON)
* expanding testing (ON)

2020-03-15 🔪🗡

* Initial version
* deaths / recoveries / cases
* doctors
* ICU
* population
* spending