@@ -230,3 +230,7 @@ items:
     deaths: 0
     confirmed: 1
     recovered: 0
+  - date: '2020-03-19'
+    deaths: 0
+    confirmed: 3
+    recovered: 0
