@@ -44,4 +44,5 @@
   value: BS
 - name: Gambia, The
   value: GM
-
+- name: Bahamas, The
+  value: BS
