@@ -543,3 +543,6 @@
   value: BS
 - name: Gambia, The
   value: GM
+- name: Bahamas, The
+  value: BS
+
