@@ -1,3 +1,9 @@
+2020-03-20
+
+* add Quebec cases data
+* start of universal URN system
+* Bahamas renamed
+
 2020-03-19
 
 * reorg datasets so we can make URNs
